--- a/mvn-common/pom.xml
+++ b/mvn-common/pom.xml
@@ -2,17 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>mvn</artifactId>
+        <groupId>com.architect</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.architect</groupId>
-    <artifactId>mvn</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>mvn-module-a</module>
-        <module>mvn-module-b</module>
-        <module>mvn-common</module>
-        <module>mvn-api</module>
-    </modules>
+    <artifactId>mvn-common</artifactId>
     <distributionManagement>
         <snapshotRepository>
             <id>snapshots</id>
