--- a/mvn-module-a/pom.xml
+++ b/mvn-module-a/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>mvn-module-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.architect</groupId>
+            <artifactId>mvn-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
